added login and register user
